--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/djlens/covid19-tracker-by-country.git"
   },
-  "keywords": [
-    "covid-19",
-    "tracker",
-    "pandemic"
-  ],
+  "keywords": [],
   "author": "Jakub Lenard",
   "license": "ISC",
   "bugs": {
@@ -22,6 +18,11 @@
   },
   "homepage": "https://github.com/djlens/covid19-tracker-by-country#readme",
   "dependencies": {
+    "hamburgers": "^1.1.3",
     "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.1.0"
   }
 }
